# backup

./: .gitignore  .gitmodules  README.md  calibration.txt  run_yolo_and_gui.sh  ur5e_real.sh  ur5e_sim_force.sh  ur5e_sim_picking.sh
Universal_Robots_ROS_Driver/ur_robot_driver/launch/: ur5e_bringup.launch  ur_control.launch
ezgripper_driver/launch/: joy.launch
fmauch_universal_robot/moveit_jog_arm/config/: ur_simulated_config.yaml
fmauch_universal_robot/moveit_jog_arm/src/: jog_calcs.cpp  low_pass_filter.cpp
fmauch_universal_robot/ur5_e_moveit_config/config/: controllers.yaml
fmauch_universal_robot/ur5_e_moveit_config/launch/: moveit.rviz
fmauch_universal_robot/ur_bringup/launch/: ur_common.launch
fmauch_universal_robot/ur_e_description/launch/: ur5e_upload.launch
fmauch_universal_robot/ur_e_description/urdf/: common.gazebo.xacro  ur5e.urdf.xacro  ur5e_robot.urdf.xacro
force-torque-sensor/src/: gazebo_transport_to_ros_topic.cpp
force_torque_tools/: README.md  Untitled Document
force_torque_tools/gravity_compensation/: CMakeLists.txt
industry_library_robot/: CMakeLists.txt  package.xml
industry_library_robot/include/: my_robot.h
industry_library_robot/include/utils/: utils.hpp
industry_library_robot/json_config/: robot_config.json
industry_library_robot/launch/: camera_calibration_pub.launch  ur5e_calibration.launch  ur5e_calibration2.launch  ur5e_ft_calib.launch  ur5e_real_force_ctl.launch  ur5e_real_picking.launch  ur5e_sim.launch
industry_library_robot/src/: my_robot.cpp  picking.cpp  test.cpp
industry_library_robot/srv/: pick_and_place.srv
others/: joint_angle_controller.py  pt.py
supersound_robot/: CMakeLists.txt  package.xml
supersound_robot/src/: ForceTorqueController.cpp  admittance_controller.cpp
ultrasound_robot/: CMakeLists.txt
ultrasound_robot/config/: force_controller.json
ultrasound_robot/include/: ForceTorqueController.h
ultrasound_robot/src/: admittance_controller.cpp  wipe_blackboard.cpp
urdf-five_L/: CMakeLists.txt  package.xml  test.py  urdf.rviz
urdf-five_L/launch/: display.launch  gazebo.launch
(+20 files in other folders)
